// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dominantBaseline renders 0 1`] = `
Array [
  .c0 {
  -webkit-dominant-baseline: 0;
  dominant-baseline: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-dominant-baseline: 0;
  dominant-baseline: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-dominant-baseline: 0;
  dominant-baseline: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-dominant-baseline: 0;
  dominant-baseline: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`dominantBaseline renders function 1`] = `
Array [
  .c0 {
  -webkit-dominant-baseline: hasnot;
  dominant-baseline: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-dominant-baseline: has;
  dominant-baseline: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-dominant-baseline: hasnot;
  dominant-baseline: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-dominant-baseline: has;
  dominant-baseline: has;
}

<div
    className="c0"
  />,
]
`;

exports[`dominantBaseline renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-dominant-baseline: invalid.path.1;
  dominant-baseline: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-dominant-baseline: invalid.path.1;
  dominant-baseline: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-dominant-baseline: invalid.path.1;
  dominant-baseline: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-dominant-baseline: invalid.path.1;
  dominant-baseline: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`dominantBaseline renders negative number 1`] = `
Array [
  .c0 {
  -webkit-dominant-baseline: -54881;
  dominant-baseline: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-dominant-baseline: -54881;
  dominant-baseline: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-dominant-baseline: -42365;
  dominant-baseline: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-dominant-baseline: -42365;
  dominant-baseline: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`dominantBaseline renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-dominant-baseline: July;
    dominant-baseline: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-dominant-baseline: August;
    dominant-baseline: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-dominant-baseline: September;
    dominant-baseline: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-dominant-baseline: November;
    dominant-baseline: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-dominant-baseline: July;
    dominant-baseline: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-dominant-baseline: August;
    dominant-baseline: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-dominant-baseline: September;
    dominant-baseline: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-dominant-baseline: November;
    dominant-baseline: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-dominant-baseline: May;
    dominant-baseline: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-dominant-baseline: June;
    dominant-baseline: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-dominant-baseline: April;
    dominant-baseline: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-dominant-baseline: November;
    dominant-baseline: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-dominant-baseline: May;
    dominant-baseline: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-dominant-baseline: June;
    dominant-baseline: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-dominant-baseline: April;
    dominant-baseline: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-dominant-baseline: November;
    dominant-baseline: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`dominantBaseline renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-dominant-baseline: July;
    dominant-baseline: July;
  }
}

@media April {
  .c0 {
    -webkit-dominant-baseline: August;
    dominant-baseline: August;
  }
}

@media January {
  .c0 {
    -webkit-dominant-baseline: September;
    dominant-baseline: September;
  }
}

@media April {
  .c0 {
    -webkit-dominant-baseline: November;
    dominant-baseline: November;
  }
}

@media June {
  .c0 {
    -webkit-dominant-baseline: August;
    dominant-baseline: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-dominant-baseline: July;
    dominant-baseline: July;
  }
}

@media April {
  .c0 {
    -webkit-dominant-baseline: August;
    dominant-baseline: August;
  }
}

@media January {
  .c0 {
    -webkit-dominant-baseline: September;
    dominant-baseline: September;
  }
}

@media April {
  .c0 {
    -webkit-dominant-baseline: November;
    dominant-baseline: November;
  }
}

@media June {
  .c0 {
    -webkit-dominant-baseline: August;
    dominant-baseline: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-dominant-baseline: January;
    dominant-baseline: January;
  }
}

@media April {
  .c0 {
    -webkit-dominant-baseline: December;
    dominant-baseline: December;
  }
}

@media January {
  .c0 {
    -webkit-dominant-baseline: April;
    dominant-baseline: April;
  }
}

@media April {
  .c0 {
    -webkit-dominant-baseline: May;
    dominant-baseline: May;
  }
}

@media June {
  .c0 {
    -webkit-dominant-baseline: June;
    dominant-baseline: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-dominant-baseline: January;
    dominant-baseline: January;
  }
}

@media April {
  .c0 {
    -webkit-dominant-baseline: December;
    dominant-baseline: December;
  }
}

@media January {
  .c0 {
    -webkit-dominant-baseline: April;
    dominant-baseline: April;
  }
}

@media April {
  .c0 {
    -webkit-dominant-baseline: May;
    dominant-baseline: May;
  }
}

@media June {
  .c0 {
    -webkit-dominant-baseline: June;
    dominant-baseline: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`dominantBaseline renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-dominant-baseline: 54881;
  dominant-baseline: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-dominant-baseline: 54881;
  dominant-baseline: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-dominant-baseline: 42365;
  dominant-baseline: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-dominant-baseline: 42365;
  dominant-baseline: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`dominantBaseline renders string 1`] = `
Array [
  .c0 {
  -webkit-dominant-baseline: July;
  dominant-baseline: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-dominant-baseline: July;
  dominant-baseline: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-dominant-baseline: June;
  dominant-baseline: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-dominant-baseline: June;
  dominant-baseline: June;
}

<div
    className="c0"
  />,
]
`;

exports[`dominantBaseline renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-dominant-baseline: DarkSlateBlue;
  dominant-baseline: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-dominant-baseline: DarkSlateBlue;
  dominant-baseline: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-dominant-baseline: DarkSlateBlue;
  dominant-baseline: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-dominant-baseline: DarkSlateBlue;
  dominant-baseline: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
